--- a/estilo.css
+++ b/estilo.css
@@ -259,3 +259,111 @@ button {
   align-items: center;
   text-align: center;
 }
+
+
+
+
+@media  screen and (max-width: 420px){
+
+  #cajaFlex,
+  nav ul, 
+  header,
+  main,
+  .flex-1 {
+ 
+   display: flex;
+   flex-direction: column;
+   
+   
+ }
+
+nav ul {
+  margin-left: 5rem;
+  gap: 1rem;
+  flex-direction: row;
+  
+}
+
+header {
+  width: 100%;
+  font-size: 16px;
+  align-items: center;
+  justify-content: center;
+}
+ 
+.logo {
+  width: 85px;
+}
+
+.banner {
+width: 300px;
+
+}
+
+.flex-1 {
+
+  flex-direction: row;
+}
+.imagen-footer {
+
+  display: none;
+}
+
+
+/*PAGINA HAMBURGUESA */
+
+
+.fotos img {
+  width: 75px;
+}
+
+.fotos {
+
+  grid-template-columns:  auto;
+  grid-template-rows: repeat(6, auto);
+  row-gap: 1px;
+    
+  }
+
+  .foto__1{
+    display: none;
+  }
+  .foto__2{
+    display: none;
+  }
+  .foto__3 {
+    display: none;
+  }
+  .foto__4 {
+    display: none;
+  }
+
+  /*PAGINA UBICAION */
+
+  .ubicacionFlex {
+    flex-direction: column;
+  }
+
+  .mapa {
+
+    width: 400px;
+    height: 230px;
+  }
+  .informacion {
+margin-top: 2rem;
+
+  }
+
+/*pagina contacto */
+
+
+.texto {
+  width: 400px;
+}
+
+.formulario {
+
+  width: 400px;
+}
+
+}
