--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,105 @@
   margin: 0;
 }
 
+
+/*
+.car {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}*/
+/*
+.carrousel {
+  width: 300px;
+  margin-top: 2rem;
+  transform: scale(4,1);
+}*/
+
+
+/*main{
+
+  height: 600px;
+
+}*/
+
+
+/*a {
+  text-decoration: none;
+  color: brown;
+}*/
+
+/*nav ul {
+
+gap: 6rem;
+list-style-type: none;
+margin-right: 6rem;
+}*/
+
+
+
+
+
+
+                                   /* PAGINA HAMBURGUESA */
+/*
+.fotos img {
+  width: 150px;
+}
+
+.fotos img:hover {
+  transform: scale(1.2, 1.2);
+}*/
+
+
+/*
+.fotos {
+ 
+  
+  column-gap: 30px;
+  row-gap: 30px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  */
+  /*text-align: center;
+  }*/
+
+
+
+  /*
+.fotos p {
+  border: 1px solid brown;
+}
+
+.fotos h3 {
+  margin-top: 1rem;
+}
+*/
+
+
+
+ /* comentario media queris */
+
+
+
+  /*nav ul {
+  margin-left: 5rem;
+  gap: 1rem;
+  flex-direction: row;
+  
+}*/
+
+  /*header {
+  width: 100%;
+  font-size: 16px;
+  align-items: center;
+  justify-content: center;
+}
+ */
+  /*.logo {
+  width: 85px;
+}*/
+
+
 header {
   background-color: chocolate;
 }
@@ -29,11 +128,7 @@ a {
   gap: 30px;
 }
 
-/*main{
 
-  height: 600px;
-
-}*/
 
 .main-index {
   display: flex;
@@ -66,17 +161,7 @@ footer {
 .imagen-footer {
   width: 150px;
 }
-/*a {
-  text-decoration: none;
-  color: brown;
-}*/
 
-/*nav ul {
-
-gap: 6rem;
-list-style-type: none;
-margin-right: 6rem;
-}*/
 li {
   color: brown;
 }
@@ -163,20 +248,36 @@ main {
 /* PAGINA BEBIDAS */
 
 #contenedor img {
-  width: 100px;
-}
-#contenedor img:hover {
-  transform: scale(1.2, 1.2);
+  width: 150px;
+  margin-top: 5px;
 }
 
-#contenedor,
+#contenedor div {
+  transition: 1s;
+  border: 3px solid black;
+  margin-bottom: 1rem;
+  width: 350px;
+  background-color: white;
+}
+
+#contenedor div:hover {
+  transform: scale(0.9, 0.9);
+}
+
+
 h3,
 p {
   background-color: rgba(255, 255, 255, 0.734);
+  
+}
+
+h3 {
+  margin-top: 1rem;
 }
 
 button {
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #contenedor {
@@ -194,31 +295,24 @@ button {
 
 /* PAGINA HAMBURGUESA */
 
-.fotos img {
-  width: 150px;
-}
-
-.fotos img:hover {
-  transform: scale(1.2, 1.2);
-}
 
 .fotos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  column-gap: 30px;
-  row-gap: 30px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+
+  row-gap: 2rem;
+  margin: 2rem;
+ 
+}
+
+.card {
   text-align: center;
+  transition: 1s;
 }
 
-.fotos p {
-  border: 1px solid brown;
-}
-
-.fotos h3 {
-  margin-top: 1rem;
+.card:hover {
+  transform: scale(0.9, 0.9);
 }
 
 /* PAGINA UBICACION */
@@ -233,6 +327,9 @@ button {
 }
 
 @media screen and (max-width: 420px) {
+  .carrousel {
+    width: 300px;
+  }
   #cajaFlex,
   .main-index,
   .flex-1 {
@@ -240,23 +337,7 @@ button {
     flex-direction: column;
   }
 
-  /*nav ul {
-  margin-left: 5rem;
-  gap: 1rem;
-  flex-direction: row;
-  
-}*/
 
-  /*header {
-  width: 100%;
-  font-size: 16px;
-  align-items: center;
-  justify-content: center;
-}
- */
-  /*.logo {
-  width: 85px;
-}*/
 
   .banner {
     width: 250px;
@@ -279,26 +360,47 @@ button {
 
   #contenedor {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns:  auto;
+    grid-template-rows: auto auto auto auto auto auto;
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
+  #contenedor img {
+    width: 100px;
+    margin-top: 5px;
+  }
+
+
+  #contenedor div {
+    transition: 1s;
+    border: 2px solid wheat;
+    margin-bottom: 1rem;
+    width: 200px;
+  }
+  
+
+
 
   button {
     margin-top: 12px;
   }
 
   /*PAGINA HAMBURGUESA */
-
-  .fotos img {
-    width: 150px;
-  }
+  
 
   .fotos {
     grid-template-columns: auto;
-    grid-template-rows: repeat(6, auto);
-    row-gap: 1px;
+    grid-template-rows: repeat(8, auto);
+    justify-content: center;
+    row-gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .card {
+    text-align: center;
+    border: 2px solid black;
   }
 
   .foto__1 {
