--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
-
+/*
 * {
   padding: 0;
   margin: 0;
+  
 }
-
+*/
+/*
+body {
+  background-color:#E9D431;
+}*/
 
 /*
 .car {
@@ -98,17 +103,21 @@ margin-right: 6rem;
   align-items: center;
   justify-content: center;
 }
- */
+ 
   /*.logo {
   width: 85px;
-}*/
-
+}
+*/
 
 header {
-  background-color: chocolate;
+  background-color: #000;
+  
+  width: 100%;
 }
+
+
 .container-fluid {
-  background-color: chocolate !important;
+ 
 
   font-size: 24px;
 }
@@ -121,12 +130,21 @@ header {
   justify-content: flex-end !important;
 }
 a {
-  color: brown !important;
+  color: whitesmoke!important;
 }
 
 .navbar-nav {
   gap: 30px;
 }
+
+main {
+  background-color:#E9D431;
+}
+
+  .navbar-toggler-icon {
+   background-color: whitesmoke;
+  }
+
 
 
 
@@ -134,6 +152,7 @@ a {
   display: flex;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  background-color: #E9D431;
 }
 
 .banner img {
@@ -151,7 +170,7 @@ a {
 }
 
 footer {
-  background-color: chocolate;
+  background-color:  #000;
 }
 
 .imagen-footer img {
@@ -229,6 +248,20 @@ main {
   }
 }
 
+
+.iconos img {
+  width: 50px;
+  margin-right: 10px;
+ }
+ /*
+.iconos img:hover {
+
+  transform: scale(1.2 , 1.2);
+}*/
+
+
+
+
 /*PAGINA CONTACTOS*/
 
 .contacto {
@@ -245,6 +278,15 @@ main {
   justify-content: center;
 }
 
+
+
+
+
+
+
+
+
+
 /* PAGINA BEBIDAS */
 
 #contenedor img {
@@ -254,10 +296,10 @@ main {
 
 #contenedor div {
   transition: 1s;
-  border: 3px solid black;
+ 
   margin-bottom: 1rem;
   width: 350px;
-  background-color: white;
+  background-color: #E9D431;
 }
 
 #contenedor div:hover {
@@ -265,11 +307,7 @@ main {
 }
 
 
-h3,
-p {
-  background-color: rgba(255, 255, 255, 0.734);
-  
-}
+
 
 h3 {
   margin-top: 1rem;
@@ -285,27 +323,42 @@ button {
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
   text-align: center;
-  background-image: url("fondos gaseosas/fondo1.jpg");
-  background-size: cover;
+  /*background-image: url("fondos gaseosas/fondo1.jpg");
+  background-size: cover;*/
+  background-color: #E9D431;
   align-items: center;
   justify-content: space-evenly;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
+.colorsito {
+  background-color: black;
+}
+
+
+
+
+
+
+
 /* PAGINA HAMBURGUESA */
 
+/*
+.fondo-negro{
+  background-color: black;
+}*/
 
-.fotos {
+/*.fotos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-
   row-gap: 2rem;
   margin: 2rem;
+  
  
-}
-
+}*/
+/*
 .card {
   text-align: center;
   transition: 1s;
@@ -314,19 +367,56 @@ button {
 .card:hover {
   transform: scale(0.9, 0.9);
 }
+*/
+
+
+.card {
+  background-color: #E9D431;
+  border: 0;
+  text-align: center;
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
+  
+ 
+}
+
+.card img {
+  margin-left: 25%;
+}
+.card:hover {
+
+  transform: scale(1.1);
+  transition: 400ms;
+ 
+}
 
 /* PAGINA UBICACION */
 
-.ubicacionFlex {
+#ubicacionFlex {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  flex-direction: column;
+  
 }
 
+.informacion h2 {
+  color: #000;
+}
+
+
+
+
+
+
 @media screen and (max-width: 420px) {
+  
+  
+  
+  
   .carrousel {
     width: 300px;
   }
@@ -341,10 +431,12 @@ button {
 
   .banner {
     width: 250px;
+    margin-left: 30%;
   }
   .video {
     width: 250px;
     height: 250px;
+    margin-left: 30%;
   }
 
   .imagen-footer {
@@ -374,7 +466,7 @@ button {
 
   #contenedor div {
     transition: 1s;
-    border: 2px solid wheat;
+  
     margin-bottom: 1rem;
     width: 200px;
   }
@@ -387,7 +479,7 @@ button {
   }
 
   /*PAGINA HAMBURGUESA */
-  
+  /*
 
   .fotos {
     grid-template-columns: auto;
@@ -396,11 +488,20 @@ button {
     row-gap: 2rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    
   }
-
+*/
   .card {
     text-align: center;
-    border: 2px solid black;
+    
+    background-color:#E9D431;
+    color: black;
+
+  }
+
+  .card img {
+
+    margin-left: 25%;
   }
 
   .foto__1 {
@@ -415,12 +516,8 @@ button {
   .foto__4 {
     display: none;
   }
-
+*/
   /*PAGINA UBICAION */
-
-  .ubicacionFlex {
-    flex-direction: column;
-  }
 
   .mapa {
     width: 100%;
