--- a/estilo.css
+++ b/estilo.css
@@ -298,12 +298,13 @@ main {
   transition: 1s;
  
   margin-bottom: 1rem;
-  width: 350px;
+  width: 250px;
   background-color: #E9D431;
 }
 
 #contenedor div:hover {
   transform: scale(0.9, 0.9);
+  background-color: #7e710e;
 }
 
 
@@ -316,6 +317,9 @@ h3 {
 button {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  background-color: #E9D431 !important;
+  border: 3px solid #000 !important;
+  color: #000 !important;
 }
 
 #contenedor {
@@ -371,22 +375,25 @@ button {
 
 
 .card {
+  width: 300px !important;
   background-color: #E9D431;
   border: 0;
   text-align: center;
-  margin-top: 3rem !important;
-  margin-bottom: 3rem !important;
-  
+  margin: 3rem !important;
+ 
  
 }
 
 .card img {
-  margin-left: 25%;
+  margin-left: 15%;
+  width: 200px !important;
+  padding: 1rem;
 }
 .card:hover {
 
   transform: scale(1.1);
   transition: 400ms;
+  background-color: #7e710e;
  
 }
 
