--- a/estilo.css
+++ b/estilo.css
@@ -24,13 +24,11 @@ body {
   transform: scale(4,1);
 }*/
 
-
 /*main{
 
   height: 600px;
 
 }*/
-
 
 /*a {
   text-decoration: none;
@@ -44,12 +42,7 @@ list-style-type: none;
 margin-right: 6rem;
 }*/
 
-
-
-
-
-
-                                   /* PAGINA HAMBURGUESA */
+/* PAGINA HAMBURGUESA */
 /*
 .fotos img {
   width: 150px;
@@ -58,7 +51,6 @@ margin-right: 6rem;
 .fotos img:hover {
   transform: scale(1.2, 1.2);
 }*/
-
 
 /*
 .fotos {
@@ -69,12 +61,10 @@ margin-right: 6rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
   */
-  /*text-align: center;
+/*text-align: center;
   }*/
 
-
-
-  /*
+/*
 .fotos p {
   border: 1px solid brown;
 }
@@ -84,20 +74,16 @@ margin-right: 6rem;
 }
 */
 
+/* comentario media queris */
 
-
- /* comentario media queris */
-
-
-
-  /*nav ul {
+/*nav ul {
   margin-left: 5rem;
   gap: 1rem;
   flex-direction: row;
   
 }*/
 
-  /*header {
+/*header {
   width: 100%;
   font-size: 16px;
   align-items: center;
@@ -111,14 +97,11 @@ margin-right: 6rem;
 
 header {
   background-color: #000;
-  
+
   width: 100%;
 }
 
-
 .container-fluid {
- 
-
   font-size: 24px;
 }
 
@@ -130,30 +113,27 @@ header {
   justify-content: flex-end !important;
 }
 a {
-  color: whitesmoke!important;
+  color: whitesmoke !important;
 }
 
 .navbar-nav {
   gap: 30px;
 }
 
-main {
+/* main {
   background-color:#E9D431;
+} */
+
+.navbar-toggler-icon {
+  background-color: whitesmoke;
 }
 
-  .navbar-toggler-icon {
-   background-color: whitesmoke;
-  }
-
-
-
-
-.main-index {
+/* .main-index {
   display: flex;
   margin-top: 3rem;
   margin-bottom: 3rem;
   background-color: #E9D431;
-}
+} */
 
 .banner img {
   width: 100%;
@@ -170,7 +150,7 @@ main {
 }
 
 footer {
-  background-color:  #000;
+  background-color: #000;
 }
 
 .imagen-footer img {
@@ -248,19 +228,15 @@ main {
   }
 }
 
-
 .iconos img {
   width: 50px;
   margin-right: 10px;
- }
- /*
+}
+/*
 .iconos img:hover {
 
   transform: scale(1.2 , 1.2);
 }*/
-
-
-
 
 /*PAGINA CONTACTOS*/
 
@@ -278,15 +254,6 @@ main {
   justify-content: center;
 }
 
-
-
-
-
-
-
-
-
-
 /* PAGINA BEBIDAS */
 
 #contenedor img {
@@ -296,19 +263,16 @@ main {
 
 #contenedor div {
   transition: 1s;
- 
+
   margin-bottom: 1rem;
   width: 250px;
-  background-color: #E9D431;
+  background-color: #e9d431;
 }
 
 #contenedor div:hover {
   transform: scale(0.9, 0.9);
   background-color: #7e710e;
 }
-
-
-
 
 h3 {
   margin-top: 1rem;
@@ -317,7 +281,7 @@ h3 {
 button {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  background-color: #E9D431 !important;
+  background-color: #e9d431 !important;
   border: 3px solid #000 !important;
   color: #000 !important;
 }
@@ -329,7 +293,7 @@ button {
   text-align: center;
   /*background-image: url("fondos gaseosas/fondo1.jpg");
   background-size: cover;*/
-  background-color: #E9D431;
+  background-color: #e9d431;
   align-items: center;
   justify-content: space-evenly;
   padding-top: 2rem;
@@ -339,12 +303,6 @@ button {
 .colorsito {
   background-color: black;
 }
-
-
-
-
-
-
 
 /* PAGINA HAMBURGUESA */
 
@@ -373,15 +331,12 @@ button {
 }
 */
 
-
 .card {
   width: 300px !important;
-  background-color: #E9D431;
+  background-color: #e9d431;
   border: 0;
   text-align: center;
   margin: 3rem !important;
- 
- 
 }
 
 .card img {
@@ -390,11 +345,9 @@ button {
   padding: 1rem;
 }
 .card:hover {
-
   transform: scale(1.1);
   transition: 400ms;
   background-color: #7e710e;
- 
 }
 
 /* PAGINA UBICACION */
@@ -407,23 +360,13 @@ button {
   margin-top: 1rem;
   margin-bottom: 1rem;
   flex-direction: column;
-  
 }
 
 .informacion h2 {
   color: #000;
 }
 
-
-
-
-
-
 @media screen and (max-width: 420px) {
-  
-  
-  
-  
   .carrousel {
     width: 300px;
   }
@@ -433,8 +376,6 @@ button {
     display: flex;
     flex-direction: column;
   }
-
-
 
   .banner {
     width: 250px;
@@ -459,7 +400,7 @@ button {
 
   #contenedor {
     display: grid;
-    grid-template-columns:  auto;
+    grid-template-columns: auto;
     grid-template-rows: auto auto auto auto auto auto;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -470,16 +411,12 @@ button {
     margin-top: 5px;
   }
 
-
   #contenedor div {
     transition: 1s;
-  
+
     margin-bottom: 1rem;
     width: 200px;
   }
-  
-
-
 
   button {
     margin-top: 12px;
@@ -500,14 +437,12 @@ button {
 */
   .card {
     text-align: center;
-    
-    background-color:#E9D431;
-    color: black;
 
+    background-color: #e9d431;
+    color: black;
   }
 
   .card img {
-
     margin-left: 25%;
   }
 
@@ -523,7 +458,7 @@ button {
   .foto__4 {
     display: none;
   }
-*/
+  */
   /*PAGINA UBICAION */
 
   .mapa {
