--- a/estilo.css
+++ b/estilo.css
@@ -95,7 +95,7 @@ margin-right: 6rem;
 }
 */
 
-header {
+/* header {
   background-color: #000;
 
   width: 100%;
@@ -118,15 +118,15 @@ a {
 
 .navbar-nav {
   gap: 30px;
-}
+} */
 
 /* main {
   background-color:#E9D431;
 } */
 
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
   background-color: whitesmoke;
-}
+} */
 
 /* .main-index {
   display: flex;
@@ -135,7 +135,7 @@ a {
   background-color: #E9D431;
 } */
 
-.banner img {
+/* .banner img {
   width: 100%;
 }
 
@@ -147,9 +147,9 @@ a {
   width: 600px;
   height: 300px;
   border: 5px solid chocolate;
-}
+} */
 
-footer {
+/* footer {
   background-color: #000;
 }
 
@@ -163,15 +163,15 @@ footer {
 
 li {
   color: brown;
-}
+} */
 
-h2 {
+/* h2 {
   color: brown;
   border: 2px solid;
   border-radius: 15px;
-}
+} */
 
-.sucursal ul {
+/* .sucursal ul {
   list-style-type: none;
 }
 
@@ -226,12 +226,12 @@ main {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
-.iconos img {
+/* .iconos img {
   width: 50px;
   margin-right: 10px;
-}
+} */
 /*
 .iconos img:hover {
 
@@ -240,7 +240,7 @@ main {
 
 /*PAGINA CONTACTOS*/
 
-.contacto {
+/* .contacto {
   border: 3px solid black;
   width: 500px;
   margin-top: 2rem;
@@ -252,57 +252,57 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
-}
+} */
 
 /* PAGINA BEBIDAS */
 
-#contenedor img {
+/* #contenedor img {
   width: 150px;
   margin-top: 5px;
-}
+} */
 
-#contenedor div {
+/* #contenedor div {
   transition: 1s;
 
   margin-bottom: 1rem;
   width: 250px;
   background-color: #e9d431;
-}
+} */
 
-#contenedor div:hover {
+/* #contenedor div:hover {
   transform: scale(0.9, 0.9);
   background-color: #7e710e;
-}
+} */
 
-h3 {
+/* h3 {
   margin-top: 1rem;
-}
+} */
 
-button {
+/* button {
   margin-top: 1rem;
   margin-bottom: 1rem;
   background-color: #e9d431 !important;
   border: 3px solid #000 !important;
   color: #000 !important;
-}
+} */
 
-#contenedor {
-  display: grid;
+/* #contenedor { */
+/* display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
-  text-align: center;
-  /*background-image: url("fondos gaseosas/fondo1.jpg");
+  text-align: center; */
+/*background-image: url("fondos gaseosas/fondo1.jpg");
   background-size: cover;*/
-  background-color: #e9d431;
+/* background-color: #e9d431;
   align-items: center;
   justify-content: space-evenly;
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
+} */
 
-.colorsito {
+/* .colorsito {
   background-color: black;
-}
+} */
 
 /* PAGINA HAMBURGUESA */
 
@@ -330,7 +330,7 @@ button {
   transform: scale(0.9, 0.9);
 }
 */
-
+/* 
 .card {
   width: 300px !important;
   background-color: #e9d431;
@@ -348,11 +348,11 @@ button {
   transform: scale(1.1);
   transition: 400ms;
   background-color: #7e710e;
-}
+} */
 
 /* PAGINA UBICACION */
 
-#ubicacionFlex {
+/* #ubicacionFlex {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -364,7 +364,7 @@ button {
 
 .informacion h2 {
   color: #000;
-}
+} */
 
 @media screen and (max-width: 420px) {
   .carrousel {
