--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -88,6 +88,7 @@ main {
   border: 0;
   text-align: center;
   margin: 3rem !important;
+  font-size: 16px;
 
   &:hover {
     transform: scale(1.1);
@@ -114,14 +115,13 @@ main {
 
 main {
   @extend .main;
+  display: block;
 
   #ubicacionFlex {
-    // display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
     flex-direction: column;
 
     h2 {
