--- a/scss/stylo.css
+++ b/scss/stylo.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
 header {
   background-image: url(../imagenes/pixeles.jpg);
   background-size: cover;
@@ -124,6 +125,7 @@ main {
   border: 0;
   text-align: center;
   margin: 3rem !important;
+  font-size: 16px;
 }
 
 .card:hover {
@@ -148,7 +150,14 @@ main {
   color: #000 !important;
 }
 
+main {
+  display: block;
+}
+
 main #ubicacionFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -156,8 +165,6 @@ main #ubicacionFlex {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -316,6 +323,7 @@ footer .flex-1 .iconos img:hover {
 
 body {
   background-color: #E9D431;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @media (max-width: 420px) {
