--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -150,6 +150,7 @@ main {
       margin-top: 2rem;
       margin-bottom: 2rem;
       background-color: gainsboro;
+      text-align: center;
 
       button {
         margin-top: 1rem;
