--- a/scss/stylo.scss
+++ b/scss/stylo.scss
@@ -1,10 +1,5 @@
 @import "variable";
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
-
-@import "header";
-@import "main";
-@import "footer";
-
 * {
   padding: 0;
   margin: 0;
@@ -15,24 +10,8 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@media (max-width: 420px) {
-  .main-index {
-    margin-right: 150px;
+@import "header";
+@import "main";
+@import "footer";
 
-    .banner {
-      img {
-        width: 250px;
-        margin-bottom: 35px;
-      }
-    }
-
-    iframe {
-      width: 225px;
-      height: 125px;
-    }
-  }
-  .mapa {
-    width: 100%;
-    height: 230px;
-  }
-}
+@import "media";
