--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -87,7 +87,8 @@ main {
   background-color: #e9d431;
   border: 0;
   text-align: center;
-  margin: 3rem !important;
+  // margin: 3rem !important;
+  margin-left: 1.5rem;
   font-size: 16px;
 
   &:hover {
